Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <pluralLabel>Certifications</pluralLabel>
    <nameField>
        <label>Certification</label>
        <type>AutoNumber</type>
        <displayFormat>CERT-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>