Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/fields/Cert_Id__c.field-meta.xml
<CustomField>
    <fullName>Cert_Id__c</fullName>
    <label>Cert Id</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <inlineHelpText>Trailhead certification identifier for deduplication.</inlineHelpText>
</CustomField>