Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/fields/Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Cert_Name__c</fullName>
    <label>Cert Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <inlineHelpText>Full name of the Salesforce certification.</inlineHelpText>
</CustomField>