Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/fields/Date_Earned__c.field-meta.xml
<CustomField>
    <fullName>Date_Earned__c</fullName>
    <label>Date Earned</label>
    <type>Date</type>
    <inlineHelpText>Date the certification was awarded.</inlineHelpText>
</CustomField>