Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/fields/Date_Expires__c.field-meta.xml
<CustomField>
    <fullName>Date_Expires__c</fullName>
    <label>Date Expires</label>
    <type>Date</type>
    <inlineHelpText>Expiry date (if applicable).</inlineHelpText>
</CustomField>