Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/fields/Maintenance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Due_Date__c</fullName>
    <label>Maintenance Due Date</label>
    <type>Date</type>
    <inlineHelpText>Date by which maintenance must be completed.</inlineHelpText>
</CustomField>