Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/validationRules/Expiry_After_Earned.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_After_Earned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Date_Expires__c)), Date_Expires__c &lt;= Date_Earned__c)</errorConditionFormula>
    <errorMessage>Expiry date must be after the date earned.</errorMessage>
</ValidationRule>