Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/listViews/Active_Certs.listView-meta.xml
<ListView>
    <fullName>Active_Certs</fullName>
    <label>Active Certs</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <columns>Cert_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Earned__c</columns>
    <columns>Date_Expires__c</columns>
</ListView>