Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Certification__c/listViews/Maintenance_Due.listView-meta.xml
<ListView>
    <fullName>Maintenance_Due</fullName>
    <label>Maintenance Due</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Maintenance Due</value>
    </filters>
    <columns>Cert_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Maintenance_Due_Date__c</columns>
</ListView>